# src/main/java/online/rabko/basketball/dto/request/SignUpRequest.java
@@ -1,14 +1,17 @@
-package online.rabko.basketball.domain.dto;
+package online.rabko.basketball.dto.request;
 
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
+/**
+ * DTO representing the user registration (sign-up) request data.
+ */
 @Data
 @AllArgsConstructor
 @NoArgsConstructor
 public class SignUpRequest {
 
-    private String login;
+    private String username;
     private String password;
 }
